[tool.poetry]
name = "web-chat"
version = "0.1.0"
description = ""
authors = ["Pavel Ryaguzov <pashajobber@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
websocket = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
